fix: update favicon path and enhance Open Graph and Twitter Card metadata

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,20 @@
   <title>PdfAnnotator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="public/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="PdfAnnotator">
+  <meta property="og:description" content="Anota tus PDFs fácilmente.">
+  <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/favicon-96x96.png">
+  <meta property="og:url" content="https://pdf-annotator-rho.vercel.app">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="PdfAnnotator">
+  <meta name="twitter:description" content="Anota tus PDFs fácilmente.">
+  <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/favicon-96x96.png">
 </head>
 
 <body>
