--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PdfAnnotator</title>
+  <title></title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="PdfAnnotator">
+  <meta property="og:title" content="">
   <meta property="og:description" content="Anota tus PDFs fácilmente.">
   <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/favicon-96x96.png">
   <meta property="og:url" content="https://pdf-annotator-rho.vercel.app">
@@ -17,7 +17,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="PdfAnnotator">
+  <meta name="twitter:title" content="">
   <meta name="twitter:description" content="Anota tus PDFs fácilmente.">
   <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/favicon-96x96.png">
 </head>
