--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,26 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>PDF Annotator | Maquetador de coordenadas para tus PDFs</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="">
-  <meta property="og:description" content="Anota tus PDFs fácilmente.">
-  <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/favicon-96x96.png">
+  <meta property="og:title" content="PDF Annotator | Maquetador de coordenadas para tus PDFs">
+  <meta property="og:description" content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
+  <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/android-chrome-512x512.png">
+  <meta property="og:image:alt" content="Logotipo de PDF Annotator sobre un fondo azul">
   <meta property="og:url" content="https://pdf-annotator-rho.vercel.app">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="Anota tus PDFs fácilmente.">
-  <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/favicon-96x96.png">
+  <meta name="twitter:title" content="PDF Annotator | Maquetador de coordenadas para tus PDFs">
+  <meta name="twitter:description" content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
+  <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/android-chrome-512x512.png">
+  <meta name="twitter:image:alt" content="Logotipo de PDF Annotator sobre un fondo azul">
 </head>
 
 <body>
