--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PDF Annotator | Maquetador de coordenadas para tus PDFs</title>
+  <title></title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
+  <meta name="description"
+    content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Open Graph -->
   <meta property="og:title" content="PDF Annotator | Maquetador de coordenadas para tus PDFs">
-  <meta property="og:description" content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
+  <meta property="og:description"
+    content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
   <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/android-chrome-512x512.png">
   <meta property="og:image:alt" content="Logotipo de PDF Annotator sobre un fondo azul">
   <meta property="og:url" content="https://pdf-annotator-rho.vercel.app">
@@ -20,7 +22,8 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="PDF Annotator | Maquetador de coordenadas para tus PDFs">
-  <meta name="twitter:description" content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
+  <meta name="twitter:description"
+    content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
   <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/android-chrome-512x512.png">
   <meta name="twitter:image:alt" content="Logotipo de PDF Annotator sobre un fondo azul">
 </head>
