Update image alt text for Open Graph and Twitter Card metadata

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
   <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/android-chrome-512x512.png">
-  <meta property="og:image:alt" content="Logotipo de PDF Annotator sobre un fondo azul">
+  <meta property="og:image:alt" content="Logotipo de PDF Annotator">
   <meta property="og:url" content="https://pdf-annotator-rho.vercel.app">
   <meta property="og:type" content="website">
 
@@ -25,7 +25,7 @@
   <meta name="twitter:description"
     content="Define y organiza coordenadas sobre tus PDFs para crear anotaciones precisas de manera rápida y visual.">
   <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/android-chrome-512x512.png">
-  <meta name="twitter:image:alt" content="Logotipo de PDF Annotator sobre un fondo azul">
+  <meta name="twitter:image:alt" content="Logotipo de PDF Annotator">
 </head>
 
 <body>
