--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="PDF Annotator | Diseña anotaciones precisas para tus PDFs">
   <meta property="og:description"
     content="Carga un PDF, marca regiones clave y exporta coordenadas listas para integrarlas en tus flujos de trabajo.">
-  <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/og-image.svg">
+  <meta property="og:image" content="https://pdf-annotator-rho.vercel.app/og-image.png">
   <meta property="og:image:alt" content="Vista previa de anotaciones en PDF con coordenadas resaltadas">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
   <meta name="twitter:title" content="PDF Annotator | Diseña anotaciones precisas para tus PDFs">
   <meta name="twitter:description"
     content="Carga un PDF, marca regiones clave y exporta coordenadas listas para integrarlas en tus flujos de trabajo.">
-  <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/og-image.svg">
+  <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/og-image.png">
   <meta name="twitter:image:alt" content="Vista previa de anotaciones en PDF con coordenadas resaltadas">
 </head>
 
