feat: add offline library and pwa support

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     content="Carga un PDF, marca regiones clave y exporta coordenadas listas para integrarlas en tus flujos de trabajo.">
   <meta name="twitter:image" content="https://pdf-annotator-rho.vercel.app/og-image.png">
   <meta name="twitter:image:alt" content="Vista previa de anotaciones en PDF con coordenadas resaltadas">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
